--- a/src/components/navbar/navbar.module.scss
+++ b/src/components/navbar/navbar.module.scss
@@ -1,7 +1,7 @@
 .navbar {
   background-color: rgb(19, 19, 19);
   min-height: 15vh;
-  position: absolute;
+  position: fixed;
   width: 100%;
   justify-self: center;
   align-self: center;
