--- a/src/components/navbar/navbar.module.scss
+++ b/src/components/navbar/navbar.module.scss
@@ -1,5 +1,10 @@
 .navbar {
-  background-color: rgb(19, 19, 19);
+  background: rgb(52, 113, 92);
+  background: linear-gradient(
+    101deg,
+    rgba(52, 113, 92, 1) 0%,
+    rgba(17, 100, 105, 1) 100%
+  );
   min-height: 15vh;
   position: fixed;
   width: 100%;
@@ -13,6 +18,12 @@
     width: 65px;
     height: 65px;
     border-radius: 15px;
-    background-color: rgb(48, 48, 48);
+    background-color: white;
+  }
+  .link {
+    font-size: 2.2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
