--- a/src/components/tracker/tracker.module.scss
+++ b/src/components/tracker/tracker.module.scss
@@ -20,6 +20,7 @@
       background-color: white;
       display: flex;
       max-width: 600px;
+      overflow: hidden;
       img {
         width: 40%;
         object-fit: cover;
