--- a/src/components/home-farmer/home-farmer.module.scss
+++ b/src/components/home-farmer/home-farmer.module.scss
@@ -1,7 +1,49 @@
 @use "../../../styles/layouts" as layouts;
 .home {
   @include layouts.page();
+  align-items: center;
   h1 {
     font-size: 2rem;
+    text-align: center;
+  }
+  .iconContainer {
+    background-color: #a97b7b;
+    border-radius: 50%;
+    width: 5rem;
+    height: 5rem;
+    img {
+      width: 100%;
+      aspect-ratio: 8/8;
+      border-radius: 50%;
+    }
+    .addProduct {
+      font-size: 2.2rem;
+      font-weight: 800;
+      background-color: #bcacac;
+      border-radius: 50%;
+      width: 3rem;
+      display: block;
+      height: 3rem;
+      text-align: center;
+      margin: 0 auto;
+      cursor: pointer;
+      margin-top: 1rem;
+    }
+  }
+  .form {
+    padding-top: 7rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+
+    .item {
+      display: flex;
+      gap: 2rem;
+      justify-content: space-between;
+    }
+    input {
+      background-color: unset;
+      color: black;
+    }
   }
 }
