--- a/src/components/product/product.module.scss
+++ b/src/components/product/product.module.scss
@@ -1,4 +1,56 @@
 @use "../../../styles/layouts";
 .product {
   @include layouts.page();
+  justify-content: center;
+
+  .info {
+    margin: 0;
+    padding: 0;
+    height: max-content;
+    min-height: 50vh;
+    width: 100%;
+    h5 {
+      margin: 0;
+      color: rgb(65, 65, 65);
+    }
+  }
+
+  img {
+    align-self: center;
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    max-width: 500px;
+  }
+
+  .products {
+    margin: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    .productBasket {
+      display: flex;
+      width: 100%;
+      background-color: rgb(224, 224, 224);
+      border-radius: 10px;
+      .content {
+        padding: 0.5rem;
+        h3,
+        h6 {
+          margin: 0;
+          width: max-content;
+        }
+        p {
+          width: max-content;
+        }
+      }
+      img {
+        object-fit: cover;
+        width: 40%;
+        height: 100%;
+      }
+    }
+  }
 }
