--- a/src/components/timeline/timeline.module.scss
+++ b/src/components/timeline/timeline.module.scss
@@ -2,8 +2,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  align-self: flex-start;
   gap: 0px;
+  margin: 1rem;
 }
 .separator {
   height: 2px;
