--- a/src/components/shop/shop.module.scss
+++ b/src/components/shop/shop.module.scss
@@ -2,4 +2,63 @@
 
 .shop {
   @include layouts.page();
+
+  .searchbar {
+    width: 100%;
+    height: 30px;
+    border-radius: 10px;
+    background-color: white;
+    color: rgb(117, 117, 117);
+    padding: 10px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+  }
+
+  .categories {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    flex-wrap: wrap;
+    gap: 30px;
+    .categorie {
+      width: 150px;
+      height: 150px;
+      background-color: white;
+      background-size: cover;
+      border-radius: 10px;
+      display: flex;
+      justify-content: center;
+      cursor: pointer;
+      align-items: center;
+      overflow: hidden;
+    }
+    h1 {
+      filter: brightness(1) !important;
+      color: white;
+      backdrop-filter: brightness(0.3);
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 1.6rem;
+      font-weight: 500;
+    }
+
+    .fincas {
+      background-image: url("/fincas.jpg");
+    }
+    .productos {
+      background-image: url("/vegetables.png");
+    }
+    .ofertas {
+      background-image: url("/offer.jpg");
+    }
+    .rapido {
+      background-image: url("/fast.jpg");
+    }
+  }
 }
